adding important files for deployment

--- a/templates/home.html
+++ b/templates/home.html
@@ -77,13 +77,13 @@
             ><span>Choose your option</span>
           </h3>
           <div class="button-body">
-            <form action="http://localhost:5000/encrypt" method="post">
+            <form action="/encrypt" method="post">
               <div class="align">
                 <button class="button" type="submit">Encrypt</button>
               </div>
             </form>
 
-            <form action="http://localhost:5000/decrypt" method="post">
+            <form action="/decrypt" method="post">
               <div class="align">
                 <button class="button" type="submit">Decrypt</button>
               </div>
